--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.10"
+    "sequelize": "^5.21.10",
+    "svg-captcha": "^1.4.0"
   }
 }
